Try integrating SCSS

--- a/src/index.html
+++ b/src/index.html
@@ -95,10 +95,13 @@
                   <span><oj-bind-text value="[[userLogin]]"></oj-bind-text></span>
                   <span slot="endIcon" :class="[[{'oj-icon demo-appheader-avatar': smScreen(), 'oj-component-icon oj-button-menu-dropdown-icon': !smScreen()}]]"></span>
                   <oj-menu id="menu1" slot="menu" style="display:none">
-                    <oj-option id="pref" value="pref">Preferences</oj-option>
-                    <oj-option id="help" value="help">Help</oj-option>
-                    <oj-option id="about" value="about">About</oj-option>
-                    <oj-option id="out" value="out">Sign Out</oj-option>
+                    <oj-option id="collections" value="collections">Collections</oj-option>
+                    <oj-option id="controls" value="controls">Controls</oj-option>
+                    <oj-option id="forms" value="forms">Forms</oj-option>
+                    <oj-option id="framework" value="framework">Framework</oj-option>
+                    <oj-option id="layout" value="layout">Layout & Nav</oj-option>
+                    <oj-option id="patterns" value="patterns">Patterns</oj-option>
+                    <oj-option id="visualization" value="visualization">Visualization</oj-option>
                   </oj-menu>
                 </oj-menu-button>
               </oj-toolbar>
